# DummyCad

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Circle.cpp  Circle.h  Curve.h  Line.cpp  Line.h  Point.cpp  Point.h  README.md  config.conf  main.cpp  msvc.bat
cmake/: doc.cmake  gtest.cmake  macros.cmake  occt.cmake  occt_dep.cmake  unittest.vcxproj.user.in
dox/: Doxyfile.in  doc.html
src/: CMakeLists.txt  Circle.cpp  Circle.h  Curve.cpp  Curve.h  Curve_def.h  Defines.h  Equation.cpp  Equation.h  Export.h  InterPoints.cpp  InterPoints.h  Intersection.cpp  Intersection.h  Line.cpp  Line.h  Point.cpp  Point.h  Source.cpp  Straight.cpp  TPoint.cpp  TPoint.h  TVector.cpp  TVector.h  Tests4.sln  Vector.h  main.cpp  resource.h
src/Tests4/: Circle.cs  Curve.cs  Point.cs  Program.cs  Straight.cs  Tests4.csproj
test/: CMakeLists.txt  ClassTest.cpp  CurveTest.cpp  IntersectionTest.cpp  TestsOCCT.cpp  TestsOCCT.cpp~RF3438fe76.TMP  TestsOCCT.cpp~RF4cdd86c7.TMP
